# vnexr

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-reusable.yml  ci.yml  codeql.yml  delete-merged-branch.yml  release-please.yml
cmake/: VneXrDeps.cmake  VneXrOpenXR.cmake  VneXrRhi.cmake  VneXrVisionOS.cmake
configs/: config.h.in
docs/: doxyfile.in
docs/vertexnova/template/diagrams/: README.md  api.drawio  context.drawio
docs/vertexnova/xr/: conventions.md  linux_setup.md  openxr_design.md  xr.md
docs/vertexnova/xr/diagrams/: README.md  api.drawio  architecture.drawio  context.drawio
examples/: CMakeLists.txt  README.md
examples/01_hello_template/: main.cpp
examples/01_hello_xr/: CMakeLists.txt  main.cpp
examples/02_null_session/: CMakeLists.txt  main.cpp
examples/03_hello_openxr/: CMakeLists.txt  main.cpp  stereo_cube_renderer.cpp  stereo_cube_renderer.h  stereo_cube_scene.cpp  stereo_cube_scene.h
examples/04_openxr_windows/: CMakeLists.txt  main.cpp  win32_loop.cpp  win32_loop.h
examples/05_visionos_immersive/: CMakeLists.txt
examples/05_visionos_immersive/bridge/: VisionOsXrBridge.h  VisionOsXrBridge.mm
examples/05_visionos_immersive/cpp/: main.cpp
examples/06_gfx_xr_scene/: CMakeLists.txt  main.cpp
examples/common/: logging_guard.h
include/vertexnova/xr/: export.h  frame.h  input.h  render_session.h  session.h  swapchain_image.h  types.h  view.h  xr.h  xr_error.h  xr_factory.h
samples/: CMakeLists.txt  README.md
samples/00_hello_xr/: CMakeLists.txt  main.cpp
samples/01_null_simulator/: CMakeLists.txt  exit_after_frames_layer.cpp  exit_after_frames_layer.h  main.cpp
samples/02_openxr_stereo/: CMakeLists.txt  main.cpp  stereo_cube_scene_layer.cpp  stereo_cube_scene_layer.h
samples/90_visionos_immersive/: CMakeLists.txt
samples/90_visionos_immersive/bridge/: VisionOsXrBridge.h
samples/90_visionos_immersive/swift/: VneXrVisionOsApp.swift
samples/91_gfx_xr_scene/: CMakeLists.txt  main.cpp
samples/framework/: CMakeLists.txt
samples/framework/app/: xr_sample_app.cpp  xr_sample_app.h
samples/framework/app/platform/: desktop_loop.cpp  desktop_loop.h
samples/framework/common/: logging_guard.h
samples/framework/layers/: xr_layer.cpp  xr_layer.h  xr_layer_stack.cpp  xr_layer_stack.h
scripts/: README.md  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_visionos.sh  build_wasm.sh  build_windows.ps1  build_windows.py  build_windows.sh  ci_verify_xr_install.sh  clang_formatter.py  format.sh  generate-docs.sh  init_submodules.sh  install_linux_openxr_deps.sh
src/: CMakeLists.txt
src/vertexnova/template/: template.cpp
src/vertexnova/xr/: xr.cpp  xr_factory.cpp
src/vertexnova/xr/backend/openxr/: CMakeLists.txt  openxr_instance_lifetime.cpp  openxr_instance_lifetime.h  openxr_platform_handle.cpp  openxr_platform_handle.h  openxr_session.cpp  openxr_session.h  openxr_swapchain_bridge.cpp  openxr_swapchain_bridge.h  openxr_util.h  openxr_vulkan_texture.cpp  openxr_vulkan_texture.h
src/vertexnova/xr/backend/openxr/graphics/: openxr_vulkan_binding.cpp  openxr_vulkan_binding.h  openxr_vulkan_graphics.cpp  openxr_vulkan_graphics.h  openxr_vulkan_texture.cpp  openxr_vulkan_texture.h
src/vertexnova/xr/backend/openxr/input/: openxr_input.cpp  openxr_input.h
src/vertexnova/xr/backend/openxr/math/: openxr_math.cpp  openxr_math.h
src/vertexnova/xr/backend/openxr/platform/: openxr_android.cpp  openxr_android.h  openxr_debug.cpp  openxr_debug.h
src/vertexnova/xr/backend/openxr/presentation/: openxr_composition_layer.cpp  openxr_composition_layer.h  openxr_swapchain_bridge.cpp  openxr_swapchain_bridge.h
src/vertexnova/xr/backend/visionos/: visionos_session.cpp  visionos_session.h
src/vertexnova/xr/core/: null_session.cpp  null_session.h  session.cpp
tests/: CMakeLists.txt  xr_test.cpp
