#==============================================================================
# Copyright (c) 2026 Ajeet Singh Yadav. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License")
#==============================================================================

if(NOT TARGET vnetemplate)
    return()
endif()

# 01 - Hello Template: minimal usage of vne::template_ns (hello, get_version)
add_subdirectory(01_hello_template)
